# mvp_ds_rag_hw

./: LICENSE  README.md  chunking.py  main.py  pyproject.toml
rag_index/: chunks.pkl  index.faiss
